--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -13,7 +13,7 @@
         <script defer src="/scripts/scripts.js"></script>
         <title>Document</title>
     </head>
-    <body>
+    <body class="">
         <style>
             .nav-item {
             list-style: none;
@@ -80,34 +80,38 @@
         </nav>
         <br>
         <br>
-        <h1 class="text-center fw-bold display-1">
-            Your Personal Assessment
-        </h1>
 
-        <section>
-            <div class="container">
-                <h1>You're from the following generation: </h1>
-                <h1 id="GenerationAssessment" class="hidden" value=<%=myInfo[0].age%>></h1>
-                <h1>Who uses social media</h1>    
-                <h1 id="HourlyAssessment" class="hidden" ><%=myInfo[0].avg_daily_sm_use%></h1>
-                <br>
-    
-                <h1>Your generation may suffer more from</h1>
-                <h2 id="stat1" class="hidden">&bull; Depression</h2>
-                <h2 id="stat2" class="hidden">&bull; Worriedness</h2>
-                <h2 id="stat3" class="hidden">&bull; Distractions</h2>
-                <h1>when compared with other generations.</h1>
-                <br>
-    
-                <h1>Find out more what you can do:</h1>
-                <!-- <h3 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
-                <h3 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
-                <h3 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3> -->
-            </div>
-            <form id="getHelpButton" action="/helpGenZ">
-                <button>Find Out More</button>
-            </form>
-        </section>
+
+        <div class="container-sm" style="background-color: white;">
+            <h1 class="text-center fw-bold display-1">
+                Your Personal Assessment
+            </h1>
+            <section>
+                <div class="container">
+                    <h1>You're from the following generation: </h1>
+                    <h1 id="GenerationAssessment" class="hidden" value=<%=myInfo[0].age%>></h1>
+                    <h1>Who uses social media</h1>    
+                    <h1 id="HourlyAssessment" class="hidden" ><%=myInfo[0].avg_daily_sm_use%></h1>
+                    <br>
+        
+                    <h1>Your may suffer more from:</h1>
+                    <h2 id="stat1" class="hidden">&bull; Depression</h2>
+                    <h2 id="stat2" class="hidden">&bull; Worriedness</h2>
+                    <h2 id="stat3" class="hidden">&bull; Distractions</h2>
+                    <h1>when compared with other of your generation.</h1>
+                    <br>
+        
+                    <h1>Here are reccommendations to avoid or improve your health: </h1>
+                    <h3 id="recstat1" class="hidden">&bull; Depression</h3>
+                    <h3 id="recstat2" class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
+                    <h3 id="recstat3" class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
+                </div>
+                <form id="getHelpButton" action="/helpGenZ">
+                    <button>Find Out More</button>
+                </form>
+            </section>  
+        </div>
+
 
         <p id="ageTag" class="truehidden"><%=myInfo[0].age%></p>
 
@@ -130,31 +134,31 @@
         if (userAge >= 59){
             userAge = "Baby Boomers"
             document.getElementById("getHelpButton").action = ("/helpBoomers")
-            document.getElementById("stat1").innerHTML = "Apathy"
-            document.getElementById("stat2").innerHTML = "Sleep Issues"
-            document.getElementById("stat3").innerHTML = "Being Highly Distracted"
+            document.getElementById("stat1").innerHTML = "&bull; Apathy"
+            document.getElementById("stat2").innerHTML = "&bull; Sleep Issues"
+            document.getElementById("stat3").innerHTML = "&bull; Being Highly Distracted"
 
         }
         else if (userAge >= 43){
             userAge = "Gen X"
             document.getElementById("getHelpButton").action = ("/helpGenX")
-            document.getElementById("stat1").innerHTML = "Being Highly Distracted"
-            document.getElementById("stat2").innerHTML = "Worriedness"
-            document.getElementById("stat3").innerHTML = "Sleep Issues"
+            document.getElementById("stat1").innerHTML = "&bull; Being Highly Distracted"
+            document.getElementById("stat2").innerHTML = "&bull; Worriedness"
+            document.getElementById("stat3").innerHTML = "&bull; Sleep Issues"
         }
         else if (userAge >= 27){
             userAge = "Millennials"
             document.getElementById("getHelpButton").action = ("/helpMillenials")
-            document.getElementById("stat1").innerHTML = "Worriedness"
-            document.getElementById("stat2").innerHTML = "Being Highly Distracted"
-            document.getElementById("stat3").innerHTML = "Difficulty Conscentrating"
+            document.getElementById("stat1").innerHTML = "&bull; Worriedness"
+            document.getElementById("stat2").innerHTML = "&bull; Being Highly Distracted"
+            document.getElementById("stat3").innerHTML = "&bull; Difficulty Conscentrating"
         }
         else{
             userAge = "Gen Z"
             document.getElementById("getHelpButton").action = ("/helpGenZ")
-            document.getElementById("stat1").innerHTML = "Worriedness"
-            document.getElementById("stat2").innerHTML = "Depression"
-            document.getElementById("stat3").innerHTML = "Being Highly Distracted"
+            document.getElementById("stat1").innerHTML = "&bull; Worriedness"
+            document.getElementById("stat2").innerHTML = "&bull; Depression"
+            document.getElementById("stat3").innerHTML = "&bull; Being Highly Distracted"
         }
 
         let sGenerationalAssessment = userAge + ",<br>"
