--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -68,7 +68,8 @@
         <div>
             <h1 class="text-center fw-bold display-2">Entries</h1>
         </div>
-        <div>
+        <br>
+        <div class="container">
             <form action="/adminDashboard" method="get">
                 <label for="filterID"> Select ID</label>
                 <select name="filterID" id="filterID">
@@ -80,7 +81,8 @@
                 <button class="btn mx-auto btn btn-outline-secondary" type="submit">Search</button>
             </form>
         </div>
-        <div class="table-responsive">
+
+        <div class="container table-responsive">
             <table class="table">
                 <thead>
                     <tr>
