--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,6 +51,12 @@
 
             <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto text-white">
+                    <!-- accessing extra
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/customizedAssessment">extra<span class="sr-only"></span></a>
+                        </li>
+                    -->
+                    
                     <!-- Home button -->
                     <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home<span class="sr-only"></span></a>
