--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,6 +56,9 @@
                         <a class="nav-link active" aria-current="page" href="/customizedAssessment">extra<span class="sr-only"></span></a>
                         </li>
                     -->
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/events">Events<span class="sr-only"></span></a>
+                    </li>
                     
                     <!-- Home button -->
                     <li class="nav-item">
@@ -142,6 +145,7 @@
         </div>
         <br>
     </div>
+
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
