--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -91,7 +91,7 @@
                     <h1>You're from the following generation: </h1>
                     <h1 id="GenerationAssessment" class="hidden" value=<%=myInfo[0].age%>></h1>
                     <h1>Who uses social media</h1>    
-                    <h1 id="HourlyAssessment" class="hidden" ><%=myInfo[0].avg_daily_sm_use%></h1>
+                    <h1 id="HourlyAssessment" class="hidden" >&emsp;<%=myInfo[0].avg_daily_sm_use%></h1>
                     <br>
         
                     <h1>Your may suffer more from:</h1>
@@ -103,15 +103,32 @@
         
                     <h1>Here are reccommendations to avoid or improve your health: </h1>
                     <h3 id="recstat1" class="hidden">&bull; Depression</h3>
+                        <ul class="hidden">
+                            <h5 id="substat1a">Hey you should do this</h5>
+                            <h5 id="substat1b">Hey you should do this</h5>
+                        </ul>
                     <h3 id="recstat2" class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
+                        <ul class="hidden">
+                            <h5>Hey you should do this</h5>
+                            <h5>Hey you should do this</h5>
+                        </ul>
                     <h3 id="recstat3" class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
+                        <ul class="hidden">
+                            <h5>Hey you should do this</h5>
+                            <h5>Hey you should do this</h5>
+                        </ul>
                 </div>
-                <form id="getHelpButton" action="/helpGenZ">
+                <!-- <form id="getHelpButton" action="/helpGenZ">
                     <button>Find Out More</button>
-                </form>
+                </form> -->
+                <div>
+                    <h6>Cited sources and External Links</h6>
+                    <ul>
+                        <a href="https://www.hopkinsmedicine.org/health/conditions-and-diseases/anxiety-disorders/anxiety-and-stress-in-teens#:~:text=Encourage%20healthy%20diet%2C%20physical%20activities,psychologist%2Fcounselor%20for%20additional%20support">John Hoppkins</a>
+                    </ul>
+                </div>
             </section>  
         </div>
-
 
         <p id="ageTag" class="truehidden"><%=myInfo[0].age%></p>
 
@@ -132,39 +149,43 @@
         let userAge = parseInt(document.getElementById("ageTag").innerHTML)
 
         if (userAge >= 59){
-            userAge = "Baby Boomers"
-            document.getElementById("getHelpButton").action = ("/helpBoomers")
-            document.getElementById("stat1").innerHTML = "&bull; Apathy"
-            document.getElementById("stat2").innerHTML = "&bull; Sleep Issues"
-            document.getElementById("stat3").innerHTML = "&bull; Being Highly Distracted"
+            userAge = "&emsp;Baby Boomers"
+            // document.getElementById("getHelpButton").action = ("/helpBoomers")
+            document.getElementById("stat1").innerHTML = "&emsp;&bull; Apathy"
+            document.getElementById("stat2").innerHTML = "&emsp;&bull; Sleep Issues"
+            document.getElementById("stat3").innerHTML = "&emsp;&bull; Being Highly Distracted"
 
         }
         else if (userAge >= 43){
-            userAge = "Gen X"
-            document.getElementById("getHelpButton").action = ("/helpGenX")
-            document.getElementById("stat1").innerHTML = "&bull; Being Highly Distracted"
-            document.getElementById("stat2").innerHTML = "&bull; Worriedness"
-            document.getElementById("stat3").innerHTML = "&bull; Sleep Issues"
+            userAge = "&emsp;Gen X"
+            // document.getElementById("getHelpButton").action = ("/helpGenX")
+            document.getElementById("stat1").innerHTML = "&emsp;&bull; Being Highly Distracted"
+            document.getElementById("stat2").innerHTML = "&emsp;&bull; Worriedness"
+            document.getElementById("stat3").innerHTML = "&emsp;&bull; Sleep Issues"
         }
         else if (userAge >= 27){
-            userAge = "Millennials"
-            document.getElementById("getHelpButton").action = ("/helpMillenials")
-            document.getElementById("stat1").innerHTML = "&bull; Worriedness"
-            document.getElementById("stat2").innerHTML = "&bull; Being Highly Distracted"
-            document.getElementById("stat3").innerHTML = "&bull; Difficulty Conscentrating"
+            userAge = "&emsp;Millennials"
+            // document.getElementById("getHelpButton").action = ("/helpMillenials")
+            document.getElementById("stat1").innerHTML = "&emsp;&bull; Worriedness"
+            document.getElementById("stat2").innerHTML = "&emsp;&bull; Being Highly Distracted"
+            document.getElementById("stat3").innerHTML = "&emsp;&bull; Difficulty Conscentrating"
         }
         else{
-            userAge = "Gen Z"
-            document.getElementById("getHelpButton").action = ("/helpGenZ")
-            document.getElementById("stat1").innerHTML = "&bull; Worriedness"
-            document.getElementById("stat2").innerHTML = "&bull; Depression"
-            document.getElementById("stat3").innerHTML = "&bull; Being Highly Distracted"
+            userAge = "&emsp;Gen Z"
+            // document.getElementById("getHelpButton").action = ("/helpGenZ")
+            document.getElementById("stat1").innerHTML = "&emsp;&bull; Worriedness"
+            document.getElementById("recstat1").innerHTML = "&emsp;&bull; Worriedness"
+                document.getElementById("substat1a").innerHTML = "&emsp;&bull; Maintain a healthy diet, physical activities and good sleep habits."
+                document.getElementById("substat1b").innerHTML = "&emsp;&bull; If you need to seek help for extreme cases, reach out to your pediatrician or trusted psychologist/counselor for additional support. School or College counselors can also be helpful."
+            document.getElementById("stat2").innerHTML = "&emsp;&bull; Depression"
+                document.getElementById("substat2a").innerHTML = "&emsp;&bull; Maintain a healthy diet, physical activities and good sleep habits."
+                document.getElementById("substat2b").innerHTML = "&emsp;&bull; If you need to seek help for extreme cases, reach out to your pediatrician or trusted psychologist/counselor for additional support. School or College counselors can also be helpful."
+            document.getElementById("stat3").innerHTML = "&emsp;&bull; Being Highly Distracted"
+            document.getElementById("recstat3").innerHTML = "&emsp;&bull; Being Highly Distracted"
         }
 
         let sGenerationalAssessment = userAge + ",<br>"
         document.getElementById("GenerationAssessment").innerHTML = sGenerationalAssessment
     </script>
-    
-    
 </body>
 </html>
