--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,6 +38,8 @@
         top:0;bottom:0;left:0;right:0; /* this could also work with width:100%; height:100%;, but is simpler */
         }
 
+        
+
     </style>
         <h2 class="p-3 bg-opacity-10 fs-6 fw-lighter text-center">Provo Social Media Usage and Mental Health Committee</h2>
         <nav class="navbar sticky-top navbar-expand-lg navbar" style="background-color: #2596be;" data-bs-theme="dark">
@@ -51,14 +53,16 @@
 
             <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto text-white">
-                    <!-- accessing extra
+                    <!--accessing extra-->
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/customizedAssessment">extra<span class="sr-only"></span></a>
                         </li>
-                    -->
+                
+                    <!--
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/events">Events<span class="sr-only"></span></a>
                     </li>
+                    -->
                     
                     <!-- Home button -->
                     <li class="nav-item">
@@ -86,7 +90,7 @@
                 </li>
             </div>
         </nav>
-        <div class="container">
+        <div class="container-fluid">
         <br>
         <!-- background image -->
         <div class="row">
@@ -105,8 +109,9 @@
                         <a href="/survey" class="btn btn-outline-success" role="button" data-bs-toggle="button">Mental Health Survey</a>
                     </div>
                 </div>
-            </div> 
             </div>
+            </div>
+        </div>
         </div>
         <br>
         <br>
@@ -117,10 +122,40 @@
         <br>
         <br>
         <br>
-    
+
+        <div class="container mx-auto">
+        <div id="carouselExampleIndicators" class="carousel slide carousel-container h-25 d-inline-block mx-auto carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/resources/44afc8_b3821d1f8dfc44c78ab589e5ee89fccf~mv2.webp" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/resources/https___cdn.evbuc.com_images_641653599_868515626953_1_original.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/resources/https___cdn.evbuc.com_images_647891039_1642573265253_1_original.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+
+
         <!-- CAROUSEL SECTION-->
     <div class="carousel-container h-25 d-inline-block mx-auto">
-        <div class="carousel-scale">
+    <div class="carousel-scale">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -134,6 +169,9 @@
             </div>
         </div>
     </div>
+    </div>
+    </div>
+    <br>
     <br>
         <div class="card">
             <div class="card-body">
@@ -144,7 +182,6 @@
             </div>
         </div>
         <br>
-    </div>
 
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
