--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -102,15 +102,15 @@
                 <br>
     
                 <h1>Here are recommendations to improve your health: </h1>
-                <h3 id="worry" class="hidden">&bull; Worry</h3>
-                    <h6 id="worryA" class="hidden">Hey</h6>
-                    <h6 id="worryB" class="hidden">Hey</h6>
-                <h3 id="diffConsc" class="hidden">&bull; Difficulty Conscentrating</h3>
-                    <h6 id="diffConscA" class="hidden">Hey</h6>
-                    <h6 id="diffConscB" class="hidden">Hey</h6>
-                <h3 id="distracted" class="hidden">&bull; Being Highly Distracted</h3>
-                    <h6 id="distractedA" class="hidden">Hey</h6>
-                    <h6 id="distractedB" class="hidden">Hey</h6>
+                <h3 id="rec1" class="hidden">&bull; Worry</h3>
+                    <h6 id="rec1A" class="hidden">Hey</h6>
+                    <h6 id="rec1B" class="hidden">Hey</h6>
+                <h3 id="rec2" class="hidden">&bull; Worry</h3>
+                    <h6 id="rec2A" class="hidden">Hey</h6>
+                    <h6 id="rec2B" class="hidden">Hey</h6>
+                <h3 id="rec3" class="hidden">&bull; Worry</h3>
+                    <h6 id="rec3A" class="hidden">Hey</h6>
+                    <h6 id="rec3B" class="hidden">Hey</h6>
             </div>
             <form id="getHelpButton" action="/helpGenZ">
                 <button class="btn mx-auto btn btn-outline-success">Find Out More</button>
@@ -137,25 +137,22 @@
 <script>
     let userAge = parseInt(document.getElementById("ageTag").innerHTML)
 
+    let rec1Array = [];
+    let rec2Array = [];
+    let rec3Array = [];
+
     let worriesRec1 = "";
     let worriesRec2 = "";
     let concentrateRec1 = "";
     let concentrateRec2 = "";
     let distractionRec1 = ""
     let distractionRec2 = ""
+    let depressionRec1 = ""
+    let depressionRec2 = ""
     let apathyRec1 = ""
     let apathysRec2 = ""
     let sleepRec1 = ""
     let sleepsRec2 = ""
-
-
-
-    // let worriesBool = ["worry", "worryA", "worryB", false];
-    // let concentrateBool = ["diffConsc", "diffConscA", "diffConscB", false];
-    // let distractionBool = ["distracted", "distractedA", "distractedB", false];
-    // let depresssionBool = ["depression", "depressionA", "depressionB", false];
-    // let apathyBool = ["apathy", "apathyA", "apathyB", false];
-    // let sleepBool = ["sleepIssues", "sleepIssuesA", "sleepIssuesB", false];
 
     if (userAge >= 59){
         userAge = "Baby Boomers"
@@ -164,9 +161,7 @@
         document.getElementById("stat2").innerHTML = "&bull; Sleep Issues"
         document.getElementById("stat3").innerHTML = "&bull; Being Highly Distracted"
 
-        rec1Array = [document.getElementById("stat1").innerHTML, apathyRec1, apathysRec2];
-        rec2Array = [document.getElementById("stat2").innerHTML, ]
-        rec3Array = [document.getElementById("stat3").innerHTML, ]
+        makeArrays(apathyRec1, apathyRec2, sleepRec1, sleepRec2, distractionRec1, distractionRec2)
 
     }
     else if (userAge >= 43){
@@ -176,9 +171,7 @@
         document.getElementById("stat2").innerHTML = "&bull; Worry"
         document.getElementById("stat3").innerHTML = "&bull; Sleep Issues"
 
-        distractionBool[3] = true;
-        worriesBool[3] = true;
-        sleepBool[3] = true;
+        makeArrays(distractionRec1, distractionRec2, worriesRec1, worriesRec2, sleepRec1, sleepRec2)
 
     }
     else if (userAge >= 27){
@@ -188,9 +181,7 @@
         document.getElementById("stat2").innerHTML = "&bull; Being Highly Distracted"
         document.getElementById("stat3").innerHTML = "&bull; Difficulty Conscentrating"
 
-        worriesBool[3] = true;
-        distractionBool[3] = true;
-        concentrateBool[3] = true;
+        makeArrays(worriesRec1, worriesRec2, distractionRec1, distractionRec2, concentrateRec1, concentrateRec2)
 
     }
     else{
@@ -200,28 +191,33 @@
         document.getElementById("stat2").innerHTML = "&bull; Depression"
         document.getElementById("stat3").innerHTML = "&bull; Being Highly Distracted"
 
-        worriesBool[3] = true;
-        depresssionBool[3] = true;
-        distractionBool[3] = true;
-
+        makeArrays(worriesRec1, worriesRec2, depressionRec1, depressionRec2, distractionRec1, distractionRec2)
     }
 
-    let loopArray = [worriesBool, concentrateBool, distractionBool, depresssionBool, apathyBool, sleepBool]
+    let loopArray = [rec1Array, rec2Array, rec3Array]
 
     for (i = 0; i < loopArray.length; i++){
-        if (loopArray[i][3] == false){
-            for (j = 0; j <= 2; j++) {
-                document.getElementById(loopArray[i][j]).classList.remove('hidden');
-                document.getElementById(loopArray[i][j]).classList.add('truehidden');
-            }
-        } else {
-            continue;
-        }
+        document.getElementById("rec1").innerHTML = loopArray[0][0]
+            document.getElementById("rec1A").innerHTML = loopArray[0][1]
+            document.getElementById("rec1B").innerHTML = loopArray[0][2]
+        document.getElementById("rec2").innerHTML = loopArray[1][0]
+            document.getElementById("rec2A").innerHTML = loopArray[1][1]
+            document.getElementById("rec2B").innerHTML = loopArray[1][2]
+        document.getElementById("rec3").innerHTML = loopArray[2][0]
+            document.getElementById("rec3A").innerHTML = loopArray[2][1]
+            document.getElementById("rec3B").innerHTML = loopArray[2][2]
     }
-
 
     let sGenerationalAssessment = userAge + "<br>"
     document.getElementById("GenerationAssessment").innerHTML = sGenerationalAssessment
+
+    function makeArrays(stat1rec1, stat1rec2, stat2rec1, stat2rec2, stat3rec1, stat3rec2){
+        rec1Array = [document.getElementById("stat1").innerHTML, stat1rec1, stat1rec2];
+        rec2Array = [document.getElementById("stat2").innerHTML, stat2rec1, stat2rec2];
+        rec3Array = [document.getElementById("stat3").innerHTML, stat3rec1, stat3rec2];
+    }
+
+
 </script>
 
 
