--- a/views/entryDetails.ejs
+++ b/views/entryDetails.ejs
@@ -9,13 +9,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="/resources/Screenshot 2023-12-05 at 8.56.01 PM.png" type="image/x-icon">
-
     <title>Entry #<%= myEntries[0].entry_id %></title>
 </head>
 <body>
-
     <section class="p-3 mb-2 bg-light text-dark">
     <div class="container">  
+        <form action="/adminDashboard" method="get" class="d-grid gap-2 d-md-block justify-content-md-end">
+            <button type="submit" class="btn btn-outline-secondary" data-bs-toggle="button">Back</button>
+        </form>
+        <br>
         <h1 class="text-center fw-bold display-2">Entry Number: <%= myEntries[0].entry_id %></h1>
         <br>
         <div class="container">
